# Discord-Purge

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  temp_tauri_init_answers.txt  vite.config.ts
.github/: FUNDING.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: api.rs  main.rs
src-tauri/src/api/: discord.rs  mod.rs  rate_limiter.rs
src-tauri/src/auth/: mod.rs
src-tauri/src/core/: error.rs  logger.rs  mod.rs  op_manager.rs  vault.rs
src/components/dashboard/: DeveloperLog.tsx  Sidebar.tsx
src/components/dashboard/modes/: MessagesMode.tsx  ServersMode.tsx
src/hooks/: useDiscordAuth.ts
src/store/: authStore.ts
