[package]
name = "src-tauri"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
keyring = "3.6.3"
oauth2 = { version = "4.4.2", features = ["reqwest"] }
rand = "0.8.5"
reqwest = { version = "0.11.27", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.10.2", features = [] }
tauri-plugin-shell = "2.3.5"
tauri-plugin-opener = "2.2.5"
tokio = { version = "1.49.0", features = ["full"] }
url = "2.5.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "registry", "std"] }
tracing-appender = "0.2.3"

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }
